test manual build 2

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -36,6 +36,7 @@ jobs:
 
           msbuild $pathToSolution /m `
           -property:Configuration=$buildConfiguration `
+          -property:Platform=x64 `
           -property:UseSharedCompilation=$useSharedCompilation
 
       - name: Perform CodeQL Analysis
